--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ image: /assets/img/og-image.png
 author :
   name : Mape Strumenti
   headline: "Guitars and basses for passion. Based in Rome, Italy"
-  image: assets/img/pic-72.jpg
+  image: assets/img/mape-logoWeb-768x184.png
   avatar: 
     src : assets/img/avatar.jpg
     srcset : 
