--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title : mape-strumenti.it
+title : mape strumenti
 baseurl: "http://mape-strumenti.it"
 description: "Guitars and basses for passion. Based in Rome, Italy"
 feed-description: "RSS Feeds for the website"
