--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title : mape strumenti
 baseurl: "http://mape-strumenti.it"
+web_address: "mape-strumenti.it"
 description: "Guitars and basses for passion. Based in Rome, Italy"
 feed-description: "RSS Feeds for the website"
 copyright: "2022"
@@ -25,7 +26,7 @@ author :
 
 contact:
     email:  info@mape-strumenti.it
-    instagram: mape_strumenti
+    instagram: "https://www.instagram.com/mape_strumenti/"
       
 include: ["_instruments"]
 # Sass settings
