--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title : mape strumenti
-baseurl: "http://mape-strumenti.it"
+baseurl: "https://mape-strumenti.it"
 web_address: "mape-strumenti.it"
 description: "Guitars and basses for passion. Based in Rome, Italy"
 feed-description: "RSS Feeds for the website"
